# hexaface

./: .gitignore  CMakeLists.txt  README.md  TODO  chgval.bat  doxyconfig
appdata/shaders/: fragment.spv  fragmentIcon.spv  vertex.spv  vertexIcon.spv  vertexPointer.spv
appdata/textures/: textures.xcf
appdata/worlds/: world
data/shaders/: shader.vert  vert.spv
src/: app.c  app.h  camera.c  camera.h  deps-compile.c  event.h  hxf.c  hxf.h  input.h  main.c  window.c  window.h  world.c  world.h
src/container/: map.c  map.h
src/engine/: game-handler.c  game-handler.h  graphics-handler.c  graphics-handler.h  input-handler.c  input-handler.h  pipeline.c  pipeline.h  vulkan.c  vulkan.h
src/glsl/: cube.vert  icon.frag  icon.vert  pointer.vert  shader.frag  shader.vert
src/graphics/: vertex.c  vertex.h  vulkan.c  vulkan.h
src/math/: algebra-linear.c  algebra-linear.h  linear-algebra.c  linear-algebra.h
src/vulkan/: vertex.c  vertex.h  vulkan.c  vulkan.h
src/win32/: window.c  window.h
textures/: textures.xcf
